# chaincpp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
examples/: basic_usage.cpp  llm_example.cpp  prompt_example.cpp  rag_example.cpp
include/chaincpp/agents/: react_agent.hpp
include/chaincpp/core/: prompt.hpp
include/chaincpp/models/: llm.hpp
include/chaincpp/rag/: document.hpp  embeddings.hpp  vector_store.hpp
include/chaincpp/security/: sandbox.hpp  secrets.hpp
src/agents/: tool.cpp
src/core/: prompt.cpp
src/models/: llm.cpp
src/rag/: document.cpp  embeddings.cpp
src/security/: sandbox.cpp
tests/: test_agents.cpp  test_models.cpp  test_prompt.cpp  test_rag.cpp  test_sandbox.cpp
